# snagger

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  build_windows.ps1  docker-compose.yml  pyproject.toml
src/youtube_audio_extractor/: __init__.py  app.py  core.py  web.py
tests/: test_web.py
